# prospectivity-heatmap

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  notes_DELETEMELATER.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
__cache__/: a_r6.feather  b_r6.feather
data/processed/: .gitkeep  prospectivity.html  prospectivity.parquet
data/raw/: .gitkeep
notebooks/: .gitkeep  cobalt_heatmap.ipynb  cobalt_heatmap_clean.ipynb  initial_data_exploration.ipynb
src/: __init__.py  cli.py  config.py  distance.py  index_h3.py  ingest.py  persist.py  score.py  viz.py
src/prospectivity-heatmap/: __init__.py  score.py
src/prospectivity_tools/: __init__.py  cli.py  config.py  distance.py  geospatial.py  index_h3.py  ingest.py  persist.py  score.py  utils.py  viz.py
tests/: __init__.py  test_cli_smoke.py  test_score.py
