[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "prospectivity-tools"
version = "0.2.0"
description = "Geospatial prospectivity heatmap using H3 indexing"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "geopandas>=0.16.0",
  "shapely>=2.1",
  "pyogrio>=0.7",
  "h3ronpy>=0.22",
  "folium>=0.17",
  "pydantic>=2.6",
  "click>=8.1",
  "pyarrow>=16.1",
  "pyproj>=3.7",
  "numpy>=2.0",
  "pandas>=2.3.1",
  "ipykernel>=6.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5",
  "ruff>=0.4.0",
  "black>=24.7",
  "pre-commit>=3.6"
]

[project.scripts]
prospectivity = "prospectivity_tools.cli:main"

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "B", "I", "UP"]

[tool.uv]
package = true
